--- a/Full-Stack/package.json
+++ b/Full-Stack/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
