added github pages deployment fixes

--- a/Full-Stack/package.json
+++ b/Full-Stack/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jmo7728.github.io/Budgetr",
+  "homepage": "https://jmo7728.github.io/Budgetr/Full-Stack",
   "name": "full-stack",
   "private": true,
   "version": "0.0.0",
